--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 11:05:09 2018</p>
+         Last Run: Wed Dec  5 12:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -58,11 +58,11 @@
                         <td>-15</td>
                         <td>-20</td>
                         <td>7</td>
-                        <td>88</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SSW</td>
-                        <td>10</td>
+                        <td>11</td>
                      </tr>
                   </tbody>
                </table>
@@ -173,7 +173,7 @@
                "data":[
                  "86",
                  "86",
-                 "88"
+                 "87"
                ]
              },
              {
@@ -184,7 +184,7 @@
                "data":[
                  "10",
                  "11",
-                 "10"
+                 "11"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 11:05:09 2018</p>
+         Last Run: Wed Dec  5 12:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -253,7 +253,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>47</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -261,23 +261,23 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>0</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>48</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>53</td>
                         <td>1</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>43</td>
+                        <td>31</td>
                      </tr>
                   </tbody>
                </table>
@@ -377,7 +377,7 @@
                "data":[
                  "1",
                  "0",
-                 "1"
+                 "0"
                ]
              },
              {
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "57",
-                 "54",
+                 "55",
                  "53"
                ]
              },
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "47",
-                 "48",
-                 "43"
+                 "53",
+                 "52",
+                 "31"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 11:05:09 2018</p>
+         Last Run: Wed Dec  5 12:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -468,31 +468,31 @@
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>19</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>1</td>
                         <td>60</td>
                         <td>1</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>24</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>SW</td>
-                        <td>27</td>
+                        <td>WSW</td>
+                        <td>35</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-5",
-                 "-4",
+                 "-3",
                  "-2"
                ]
              },
@@ -532,7 +532,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "-1",
+                 "0",
                  "1"
                ]
              }
@@ -603,7 +603,7 @@
                "data":[
                  "66",
                  "60",
-                 "56"
+                 "55"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "19",
-                 "24",
-                 "27"
+                 "22",
+                 "29",
+                 "35"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 11:05:09 2018</p>
+         Last Run: Wed Dec  5 12:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -683,7 +683,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>70</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -693,9 +693,9 @@
                         <td>5</td>
                         <td>73</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>W</td>
-                        <td>72</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -707,7 +707,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>71</td>
+                        <td>74</td>
                      </tr>
                   </tbody>
                </table>
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "70",
-                 "72",
-                 "71"
+                 "71",
+                 "74",
+                 "74"
                ]
              }
            ]
