--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 12:05:09 2018</p>
+         Last Run: Wed Dec  5 13:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -43,14 +43,14 @@
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-15</td>
-                        <td>-20</td>
+                        <td>-14</td>
+                        <td>-19</td>
                         <td>7</td>
                         <td>86</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>11</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,7 +58,7 @@
                         <td>-15</td>
                         <td>-20</td>
                         <td>7</td>
-                        <td>87</td>
+                        <td>88</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SSW</td>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-19",
-                 "-20",
+                 "-19",
                  "-20"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-14",
-                 "-15",
+                 "-14",
                  "-15"
                ]
              }
@@ -173,7 +173,7 @@
                "data":[
                  "86",
                  "86",
-                 "87"
+                 "88"
                ]
              },
              {
@@ -183,7 +183,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "10",
-                 "11",
+                 "13",
                  "11"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 12:05:09 2018</p>
+         Last Run: Wed Dec  5 13:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -249,11 +249,11 @@
                         <td>-7</td>
                         <td>-11</td>
                         <td>1</td>
-                        <td>57</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>53</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -261,23 +261,23 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>0</td>
-                        <td>55</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>52</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>0</td>
-                        <td>53</td>
+                        <td>-3</td>
+                        <td>-7</td>
+                        <td>1</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>W</td>
-                        <td>31</td>
+                        <td>WSW</td>
+                        <td>33</td>
                      </tr>
                   </tbody>
                </table>
@@ -306,7 +306,7 @@
                "data":[
                  "-11",
                  "-8",
-                 "-6"
+                 "-7"
                ]
              },
              {
@@ -318,7 +318,7 @@
                "data":[
                  "-7",
                  "-4",
-                 "-2"
+                 "-3"
                ]
              }
            ]
@@ -377,7 +377,7 @@
                "data":[
                  "1",
                  "0",
-                 "0"
+                 "1"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "60",
                  "57",
-                 "55",
-                 "53"
+                 "55"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "54",
                  "53",
-                 "52",
-                 "31"
+                 "33"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 12:05:09 2018</p>
+         Last Run: Wed Dec  5 13:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -462,25 +462,25 @@
                         <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>-2</td>
-                        <td>-5</td>
+                        <td>-6</td>
                         <td>2</td>
-                        <td>66</td>
+                        <td>67</td>
                         <td>1</td>
-                        <td>8</td>
-                        <td>WSW</td>
-                        <td>22</td>
+                        <td>10</td>
+                        <td>SW</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>60</td>
+                        <td>61</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>WSW</td>
-                        <td>29</td>
+                        <td>SW</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -491,8 +491,8 @@
                         <td>55</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>WSW</td>
-                        <td>35</td>
+                        <td>SW</td>
+                        <td>36</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,7 +519,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-5",
+                 "-6",
                  "-3",
                  "-2"
                ]
@@ -601,8 +601,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
-                 "60",
+                 "67",
+                 "61",
                  "55"
                ]
              },
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "22",
-                 "29",
-                 "35"
+                 "23",
+                 "30",
+                 "36"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 12:05:09 2018</p>
+         Last Run: Wed Dec  5 13:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -678,36 +678,36 @@
                         <td>Mostly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>5</td>
+                        <td>10</td>
                         <td>73</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>71</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>5</td>
-                        <td>73</td>
+                        <td>10</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>74</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>5</td>
-                        <td>74</td>
+                        <td>10</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>74</td>
+                        <td>75</td>
                      </tr>
                   </tbody>
                </table>
@@ -805,9 +805,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "5",
-                 "5"
+                 "10",
+                 "10",
+                 "10"
                ]
              },
              {
@@ -817,8 +817,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "73",
-                 "73",
-                 "74"
+                 "75",
+                 "76"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "71",
-                 "74",
-                 "74"
+                 "72",
+                 "75",
+                 "75"
                ]
              }
            ]
