--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 13:05:10 2018</p>
+         Last Run: Wed Dec  5 14:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -43,26 +43,26 @@
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-14</td>
-                        <td>-19</td>
+                        <td>-15</td>
+                        <td>-20</td>
                         <td>7</td>
-                        <td>86</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>13</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-15</td>
-                        <td>-20</td>
+                        <td>-16</td>
+                        <td>-21</td>
                         <td>7</td>
-                        <td>88</td>
+                        <td>89</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SSW</td>
-                        <td>11</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,8 +90,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-19",
-                 "-19",
-                 "-20"
+                 "-20",
+                 "-21"
                ]
              },
              {
@@ -102,8 +102,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-14",
-                 "-14",
-                 "-15"
+                 "-15",
+                 "-16"
                ]
              }
            ]
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "86",
-                 "86",
-                 "88"
+                 "87",
+                 "89"
                ]
              },
              {
@@ -183,8 +183,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "10",
-                 "13",
-                 "11"
+                 "14",
+                 "12"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 13:05:10 2018</p>
+         Last Run: Wed Dec  5 14:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -249,35 +249,35 @@
                         <td>-7</td>
                         <td>-11</td>
                         <td>1</td>
-                        <td>60</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>54</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>-4</td>
-                        <td>-8</td>
-                        <td>0</td>
-                        <td>57</td>
+                        <td>-5</td>
+                        <td>-9</td>
+                        <td>1</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>53</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-3</td>
                         <td>-7</td>
                         <td>1</td>
-                        <td>55</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>33</td>
+                        <td>26</td>
                      </tr>
                   </tbody>
                </table>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-11",
-                 "-8",
+                 "-9",
                  "-7"
                ]
              },
@@ -317,7 +317,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-7",
-                 "-4",
+                 "-5",
                  "-3"
                ]
              }
@@ -376,7 +376,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "1",
-                 "0",
+                 "1",
                  "1"
                ]
              },
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "60",
-                 "57",
-                 "55"
+                 "63",
+                 "61",
+                 "58"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "54",
-                 "53",
-                 "33"
+                 "48",
+                 "48",
+                 "26"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 13:05:10 2018</p>
+         Last Run: Wed Dec  5 14:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -460,27 +460,27 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
                         <td>2</td>
                         <td>67</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>SW</td>
-                        <td>23</td>
+                        <td>WSW</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>1</td>
-                        <td>61</td>
+                        <td>62</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>30</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -488,11 +488,11 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>55</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>11</td>
                         <td>SW</td>
-                        <td>36</td>
+                        <td>53</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-6",
-                 "-3",
+                 "-4",
                  "-2"
                ]
              },
@@ -532,7 +532,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "0",
+                 "-1",
                  "1"
                ]
              }
@@ -602,8 +602,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "67",
-                 "61",
-                 "55"
+                 "62",
+                 "57"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "23",
-                 "30",
-                 "36"
+                 "37",
+                 "46",
+                 "53"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 13:05:10 2018</p>
+         Last Run: Wed Dec  5 14:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -676,38 +676,38 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>10</td>
-                        <td>73</td>
+                        <td>-3</td>
+                        <td>-7</td>
+                        <td>9</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>72</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>10</td>
-                        <td>75</td>
+                        <td>Partly Cloudy</td>
+                        <td>-4</td>
+                        <td>-8</td>
+                        <td>9</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>75</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-3</td>
-                        <td>-7</td>
+                        <td>Partly Cloudy</td>
+                        <td>-5</td>
+                        <td>-10</td>
                         <td>10</td>
-                        <td>76</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
-                        <td>75</td>
+                        <td>WSW</td>
+                        <td>43</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,9 +734,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
-                 "-6",
-                 "-7"
+                 "-7",
+                 "-8",
+                 "-10"
                ]
              },
              {
@@ -746,9 +746,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
-                 "-2",
-                 "-3"
+                 "-3",
+                 "-4",
+                 "-5"
                ]
              }
            ]
@@ -805,8 +805,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "10",
-                 "10",
+                 "9",
+                 "9",
                  "10"
                ]
              },
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
                  "75",
-                 "76"
+                 "77",
+                 "79"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "72",
-                 "75",
-                 "75"
+                 "70",
+                 "53",
+                 "43"
                ]
              }
            ]
